# Matrix

./: .gitignore  CMakeLists.txt  README.md
matrix/benchmarks/: CMakeLists.txt  main.cpp
matrix/include/: Matrix.h
matrix/source/: Matrix.cpp  main.cpp
matrix/unit_tests/: CMakeLists.txt  main.cpp
projects/benchmarks/: CMakeLists.txt  main.cpp
projects/matrix/: CMakeLists.txt
projects/matrix/include/: Matrix.h  MatrixUtils.h
projects/matrix/source/: Matrix.cpp  MatrixUtils.cpp  main.cpp
projects/unit_tests/: CMakeLists.txt  main.cpp
